--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
   "outputDirectory": "client/.next",
-  "installCommand": "npm run install-all"
+  "installCommand": "npm run install-all",
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://textoria.onrender.com/api/$1"
+    }
+  ]
 }
