--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
+  "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/.next",
-  "installCommand": "npm run install-all",
+  "installCommand": "npm install && cd server && npm install && cd ../client && npm install",
   "rewrites": [
     {
       "source": "/api/(.*)",
