--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/.next",
-  "installCommand": "npm install && cd server && npm install && cd ../client && npm install",
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "https://textoria.onrender.com/api/$1"
-    }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
