--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "buildCommand": "cd client && npm install && npm run build",
+  "outputDirectory": "client/.next",
+  "installCommand": "npm install && cd server && npm install && cd ../client && npm install"
 }
