--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,14 @@
 [build]
   command = "cd client && npm install && npm run build"
-  publish = "client/out"
+  publish = "client/.next"
 
 [build.environment]
   NODE_VERSION = "18"
+
+[[redirects]]
+  from = "/api/*"
+  to = "https://textoria.onrender.com/api/:splat"
+  status = 200
 
 [[redirects]]
   from = "/*"
