--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "cd client && npm install && npm run build"
-  publish = "client/.next"
+  publish = "client/out"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -10,6 +10,7 @@
   to = "https://textoria.onrender.com/api/:splat"
   status = 200
 
+# Handle SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
