--- a/server/render.yaml
+++ b/server/render.yaml
@@ -23,6 +23,8 @@ services:
         sync: false
       - key: STABILITY_API_KEY
         sync: false
+      - key: FALAI_API_KEY
+        sync: false
       - key: RATE_LIMIT_WINDOW_MS
         value: 900000
       - key: RATE_LIMIT_MAX_REQUESTS
