--- a/server/render.yaml
+++ b/server/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: textoria-backend
     env: node
-    buildCommand: npm install && npx prisma generate && npx prisma db push
-    startCommand: npm start
+    buildCommand: npm install && npx prisma generate && npx prisma db push --force-reset
+    startCommand: npx prisma db push && npm start
     envVars:
       - key: NODE_ENV
         value: production
